--- a/include/views/default/cockpit2/frontend/settlement/settlement.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement.phtml
@@ -23,4 +23,12 @@
 			<tr><td><a href="/settlement/drivers/deleted">Deleted Payments</a></td></tr>
 		</table>
 	</div>
+	<br>
+	<h1 class="title"><i class="fa fa-credit-card"></i>Pex Card</h1>
+	<div class="box-content2 box-content-table">
+		<table>
+			<tr><td><a href="/pexcard/report">Pex Card Report</a></td></tr>
+		</table>
+	</div>
+
 </div>
