--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -136,15 +136,6 @@
 					</table>
 				</a>
 
-				<a href="/config" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'config' || navigation.page == 'config-rewards')}">
-					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
-						<tr>
-							<td class="side-menu-icon"><i class="fa fa-cog"></i></td>
-							<td class="side-menu-label">Config</a></td>
-						</tr>
-					</table>
-				</a>
-
 				<a href="/customers" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'customers' || navigation.page == 'customer')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -207,12 +198,12 @@
 						</tr>
 					</table>
 				</a>
-
-				<a href="/pexcard/" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'pexcard')}">
+				
+				<a href="/tools" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'config' || navigation.page == 'config-rewards')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
-							<td class="side-menu-icon"><i class="fa fa-credit-card"></i></td>
-							<td class="side-menu-label">Pex Card</a></td>
+							<td class="side-menu-icon"><i class="fa fa-cogs"></i></td>
+							<td class="side-menu-label">Tools &amp; Config</a></td>
 						</tr>
 					</table>
 				</a>
@@ -225,10 +216,6 @@
 						</tr>
 					</table>
 				</a>
-
-
-
-
 
 			</div>
 
