--- a/include/views/default/cockpit2/frontend/pexcard/pexcard.phtml
+++ b/include/views/default/cockpit2/frontend/pexcard/pexcard.phtml
@@ -8,6 +8,7 @@
 			<tr><td><a href="/pexcard/log">Transactions log</a></td></tr>
 			<tr><td><a href="/pexcard/report">Pex Card Report</a></td></tr>
 			<tr><td><a href="/pexcard/card/log">Card Activations Log</a></td></tr>
+			<tr><td><a href="/pexcard/config">Config</a></td></tr>
 		</table>
 	</div>
 </div>
