--- a/include/views/default/cockpit2/frontend/staff/staff-payinfo.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-payinfo.phtml
@@ -72,7 +72,7 @@
 				<li class="li-input" ng-class="{'error':form.payInfoUsingPex.$invalid}">
 					<div class="label">Using Pex Card</div>
 					<div class="input">
-						<select ng-model="payInfo.using_pex" required name="payInfoUsingPex" ng-options="type.value as type.label for type in payment._using_pex"></select>
+						<select ng-model="payInfo.using_pex" required name="payInfoUsingPex" ng-options="type.value as type.label for type in yesNo"></select>
 					</div>
 					<div class="box-error">
 						<small ng-show="form.payInfoUsingPex.$error.required">Required.</small>
