--- a/include/views/default/cockpit2/frontend/tools/tools.phtml
+++ b/include/views/default/cockpit2/frontend/tools/tools.phtml
@@ -15,6 +15,7 @@
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr><td><a href="/config/rewards">Customer Rewards</a></td></tr>
+			<tr><td><a href="/pexcard/config">Pex Card Settings</a></td></tr>
 		</table>
 	</div>
 
