--- a/include/views/default/crunchbutton/frontend/restaurants.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurants.phtml
@@ -37,7 +37,10 @@
 							<div class="meal-item-tag" ng-switch-when="takeout">Take out only</div>
 							<div class="meal-item-tag about-to-close" ng-switch-when="closing">Hurry, closes in {{restaurant._closesIn}} min!</div>
 							<div class="meal-item-tag-closed" ng-switch-when="opening">Opens {{restaurant._opensIn_formatted}}</div>
-							<div class="meal-item-tag-closed" ng-switch-when="closed">Opens in a few hours</div>
+							<div class="meal-item-tag-closed" ng-switch-when="closed">
+								<span ng-if="restaurant._opensIn_formatted">Opens {{restaurant._opensIn_formatted}}</span>
+								<span ng-if="!restaurant._opensIn_formatted">Opens in a few hours</span>
+							</div>
 							<div class="meal-item-tag-closed" ng-switch-when="force_close">Temporarily closed {{restaurant._closedDueTo}}</div>
 						</div>
 					</div>
