--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
@@ -1,6 +1,6 @@
 <div class="top-pad"></div>
 
-<div class="content-padding" ng-show="ready">
+<div class="content-padding" ng-if="ready">
 
 	<h1 class="title left"><i class="fa fa-automobile"></i><span>Driver Onboarding</span></h1>
 
