--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -65,6 +65,7 @@
 <script src="/assets/cockpit/js/controllers.community.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.pexcard.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.tools.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.marketing.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.blast.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Filters -->
@@ -106,5 +107,6 @@
 <script src="/assets/cockpit/js/service.view.list.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.maps.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.pexcard.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.marketing.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.favico.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.blast.js?v=<?=Deploy_Server::currentVersion()?>"></script>
