--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-setup.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-setup.phtml
@@ -6,10 +6,10 @@
 
 		<div ng-show="finished">
 			<div class="dialog-message dialog-message-success">
-				Your login is {{driver.login}}.
+				Your username is {{driver.login}}.
 			</div>
 			<div class="button-pushable find-restaurants">
-				<button class="button orange" ng-click="access()">Access cockpit</button>
+				<button class="button orange" ng-click="access()">Login</button>
 			</div>
 		</div>
 
