--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -67,7 +67,7 @@
 <script src="/assets/cockpit/js/controllers.tools.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.marketing.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.blast.js?v=<?=Deploy_Server::currentVersion()?>"></script>
-
+<script src="/assets/cockpit/js/controllers.tv.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <!-- AngularJS Filters -->
 <script src="/assets/js/filters.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
@@ -110,3 +110,4 @@
 <script src="/assets/cockpit/js/service.marketing.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.favico.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.blast.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.tv.js?v=<?=Deploy_Server::currentVersion()?>"></script>
