--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -73,9 +73,9 @@
 		</table>
 
 
-		<h1 class="title" ><i class="fa fa-bank"></i><span>Payment Information</span></h1>
+		<h1 class="title" ><i class="fa fa-bank"></i><span style="font-size: 1.5em;"><strong>MOST IMPORTANT: Payment Information</strong></span></h1>
 		<h2 class="title driver-docs-text">
-			To complete your onboarding, please enter your <a href="/drivers/docs/payment">payment information</a>.
+			To complete your onboarding and GET PAID, please enter your <a href="/drivers/docs/payment">payment information</a>.
 		</h2>
 
 		<div>
