--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -29,9 +29,9 @@
 			How can I get tipped more on cash orders?
 		</b>
 		<br>
-		Easy: when a customer asks you how much the order is, say the order total, not including tip.<br>
+		Easy: when a customer asks you how much the order is, say the order total, <strong>not including tip</strong>.<br>
 		Customer: O hello driver hurray my food, how much is it??<br>
-		You: $25.67, not including tip.<br>
+		You: $25.67, <strong>not including tip</strong>.<br>
 		Customer: Ok, here, have a million dollars, keep the change.<br>
 		You: K thx bye.
 		<br><br>
@@ -47,7 +47,7 @@
 			Stuff drivers are doing with codes that's working great:
 		</b>
 		<br>
-		-talk to literally everyone you can when waiting to pick up food at restaurants or deliver it at dorms/buildings. Talking to EVERYONE waiting in line at Chipotle, etc. is PERFECT.
+		-talk to literally everyone you can when waiting to pick up food at restaurants or deliver it at dorms/buildings. Talking to EVERYONE waiting in line at Chipotle, etc. is PERFECT.<br>
 		-post on Facebook/twitter<br>
 		-hand out cards with your code on them
 		<br><br>
@@ -150,7 +150,7 @@
 		Youbeo, Inc has an insurance policy that will protect Youbeo and its drivers from liability claims arising from a motor vehicle collision during the course of business. The protection is up to $1,000,000 liability insurance policy that protects you against claims to third parties for injuries and property damage. This protection does not cover physical damage to any vehicle being used by a driver associated with Youbeo. Physical damage to any employee or subcontractor’s vehicle must be done through the individual's primary insurance company.
 		<br><br>
 
-		<b>Other Pointers and Notes:</b>
+		<span style="font-size: 1.5em;"><b>Other Pointers and Notes:</b></span>
 		<br><br>
 
 		<b>
@@ -201,7 +201,19 @@
 		<br>
 		The whole restaurant staff usually isn't trained about Crunchbutton, and in some cases we don't have a formal relationship with the restaurant yet, so it's best not to invite confusion.  In most cases there's no need to mention you're picking up a delivery order.  Just order the food yourself, or if we send the order directly, then say you're there to pick up the takeout order under the customer's name.
 		<br><br>
+<b>Having difficulty viewing orders or using cockpit.la?</b><br>
+Try a different browser. On iOS devices, use Safari. On Android, use Chrome (not Firefox). If you’re still having issues, please text us at 646-783-144 or email us with the specifics and a screenshot of the issue to team@crunchbutton.com
+<br><br>
+<b>Where do I go?</b><br>
+Just hang out somewhere near the restaurants till you receive your first order!<br><br>
 
+
+<b>What do I do when the customer is MIA?</b><br>
+Hang onto the food, text the customer and leave a friendly voicemail. Then go onto your next order, and hopefully the customer will respond soon! Meanwhile, let us know too, by text.<br><br>
+
+<b>How do I deliver more orders faster and make more money?</b><br>
+Pick up multiple orders at once, then deliver them all at once. This allows you to deliver more orders in the same period of time and make more money. <br>
+Why this works: Restaurants are usually close together. And customers are usually close together. So first visit a bunch of restaurants, then deliver to a bunch of customers.<br><br> <!--<a href=#>Here's</a> a little more background to illustrate just how much more effective the multiple orders model is.-->
 		<b>
 			I don’t understand something else, screw you, you suck waaaaaa!!
 		</b>
