--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -3,6 +3,10 @@
 <!-- actions -->
 <div class="control" ng-show="ready">
 
+	<div class="divider"></div>
+
+	<navigation-back></navigation-back>
+
 	<div class="content-padding">
 
 		<div ng-if="order.status.status == 'new'">
