--- a/include/views/default/cockpit2/frontend/tools/tools.phtml
+++ b/include/views/default/cockpit2/frontend/tools/tools.phtml
@@ -5,7 +5,7 @@
 	<h1 class="title"><i class="fa fa-wrench"></i>Tools</h1>
 	<div class="box-content2 box-content-table">
 		<table>
-			<tr><td><a href="/pexcard/card">Assign Pex Card to Driver</a></td></tr>
+			<tr><td><a href="/pexcard/">Pex Card</a></td></tr>
 			<tr><td><a href="/support/phone">Make a call / Send SMS</a></td></tr>
 			<tr><td><a href="/blast">Blasts</a></td></tr>
 			<tr><td><a href="/marketing/outgoing">Marketing: Outgoing Emails/Texts</a></td></tr>
@@ -16,7 +16,6 @@
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr><td><a href="/config/rewards">Customer Rewards</a></td></tr>
-			<tr><td><a href="/pexcard/config">Pex Card Settings</a></td></tr>
 		</table>
 	</div>
 
