--- a/include/views/default/cockpit/drivers/shift/community/add.phtml
+++ b/include/views/default/cockpit/drivers/shift/community/add.phtml
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		<div class="row-fluid">
 			<div class="span12">
-						<form>
+
 							<div class="row-fluid">
 								<div class="span12">
 									<div class="span4">
@@ -43,7 +43,7 @@
 										<strong>Hours</strong>
 									</div>
 									<div class="span7">
-										<input type="text" name="form-hours" id="form-hours"/> 
+										<input type="text" name="form-hours" id="form-hours"/>
 										<br/><br/>
 									</div>
 								</div>
@@ -59,7 +59,7 @@
 									</div>
 								</div>
 							</div>
-							
+
 							<br/><br/>
 							<?php /*
 							<div class="row-fluid">
@@ -69,18 +69,18 @@
 									</div>
 									<div class="span8">
 										<div class="row-fluid">
-											<?php 
+											<?php
 											$count = 1;
-											foreach( $this->days as $day ) { 
+											foreach( $this->days as $day ) {
 												if( $count == 1 )
 												?>
 												<div class="span3">
 													<input type="checkbox" class="icheck" value="<?php echo $day->format( 'Y-m-d' ); ?>" name="form-weekdays" id="form-<?php echo $day->format( 'D' ); ?>"><label for="form-<?php echo $day->format( 'D' ); ?>"><?php echo $day->format( 'D' ); ?></label>
 												</div>
-											<?php 
+											<?php
 												$count++;
 											} ?>
-										</div>	
+										</div>
 									</div>
 								</div>
 							</div>
@@ -93,11 +93,10 @@
 								</div>
 								<div class="row-fluid">
 									<div class="span6">
-										<button type="button" onclick="shift.community.add();" class="btn btn-green"><i class="icon-save"></i> Save </button> 
+										<button type="button" onclick="shift.community.add();" class="btn btn-green"><i class="icon-save"></i> Save </button>
 									</div>
 								</div>
 							</div>
-						</form>
 
 			</div>
 		</div>
@@ -106,5 +105,10 @@
 <script type="text/javascript">
 $( document ).ready( function(){
 	$( '.icheck' ).iCheck( { checkboxClass: "icheckbox_flat-aero", radioClass: "iradio_flat-aero" } );
+	$( "#form-hours" ).keypress(function(e) {
+		if(e.which == 13) {
+			shift.community.add();
+		}
+	} );
 } );
 </script>
