--- a/include/views/default/crunchbutton/frontend/help.phtml
+++ b/include/views/default/crunchbutton/frontend/help.phtml
@@ -2,17 +2,14 @@
 
 	<h1 class="about-header">About</h1>
 	<p>
-		Crunchbutton lets you order your favorite food with one click. We get the best food in your community delivered straight to your door. Place an order, and we save it for next time, along with your delivery and payment info. Come back and reorder your favorites with just one click/tap.
+		Crunchbutton delivers the best food in your area straight to your door. Place an order, and we save it for next time, along with your delivery and payment info. Come back and reorder your favorites with just one click.
 	</p>
 	<br /><br />
 
-	<h1 class="about-header">Help</h1>
+	<!--<h1 class="about-header">Help</h1>-->
 	<p>
-		<b>Problem with your order?</b><br />
-		Try contacting the restaurant you ordered from.
-		<br /><br />
 		<b>Need to contact Crunchbutton?</b><br />
-		Text us at <a href="sms:+16467831444" target="_system">(646) 783-1444</a> or email us at <a href="mailto:{{customers}}">{{customers}}</a>.
+		Problem with your order? Need help with your homework? Text or call us at <a href="sms:+16467831444" target="_system">(646) 783-1444</a> or email us at <a href="mailto:{{customers}}">{{customers}}</a>. 
 		<br /><br />
 	</p>
 	<br /><br />
@@ -20,26 +17,30 @@
 	<h1 class="about-header">FAQ</h1>
 	<p>
 		<b>How do I order food?</b><br />
-		Easy! Just go to crunchbutton.com and click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and try to stay hungry! The driver will call you when they're outside.
+		Easy! First go to crunchbutton.com or use our <a href="http://crunchbutton.com/app">iOS/Android</a> apps. Click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and enjoy your fleeting moments of hunger! Your driver will update their progress online and call when they're outside.<br /><br />
+		<b>But I've never used Crunchbutton before...</b><br />
+Hey, it's okay. I remember my first time. It lasted less than 30 seconds. I went to Crunchbutton.com, found my favorite restaurant, and hit "Get Food." Minutes later, my sandwich arrived. Post-mastication bliss ensued; that sandwich sure knew how to crunch my buttons.
 		<br /><br />
 		<b>How do you save my info?</b><br />
-		We use SSL and a PCI-DSS Level 1 Compliant provider to encrypt your information when you place an order. We never store any of your financial information on our web servers.
+		We never store any of your financial information on our web servers. We use SSL and a PCI-DSS Level 1 Compliant provider to encrypt your information when you first place an order.
 		<br /><br />
 		<b>How do I change my stored info?</b><br />
 		Just click on the info you want to change, enter the changes, and, after you place your order, it’ll be saved for next time.
 		<br /><br />
-		<b>But I've never used Crunchbutton before...</b><br />
-		Oh man, it's okay. I remember my first time, it didn't last more than 30 seconds. I went to Crunchbutton.com, found my favorite restaurant, hit "Get Food." Minutes later, my sandwich arrived. Post-coital bliss ensued, that sandwich sure knew how to crunch my buttons.
-		<br /><br />
-		<b>omg i am wayy too drunk to enter my information</b><br />
-		We thought this might happen. Luckily, Crunchbutton saves your address, phone, and payment info, so all you have to do is click what you want and hit the big, red "Get Food" button. Try to be awake when the delivery guy calls.
+				<b>omg i am wayyy too drunk for this</b><br />
+				We thought this might happen. Luckily, Crunchbutton saves your address, phone, and payment info, so all you have to do is click what you want and hit the big, red "Get Food" button. Try to be awake when the delivery guy calls. Watching <a href="http://www.leekspin.com/">www.leekspin.com</a> can help.
 		<br /><br />
 		<b>I want to put a restaurant on Crunchbutton.</b><br />
 		Good idea! Contact <a href="mailto:{{join}}">{{join}}</a>.
 		<br /><br />
+		
+		<b>I want to drive for Crunchbutton</b><br />
+Cool! Apply <a href="http://www.crunchbutton.com/apply">here</a>.<br /><br />
 		<b>I know I can order food online, but can I order by US mail?</b><br />
 		Why yes you can! Send a check or money order to Crunchbutton, 1120 Princeton Dr STE 7, Marina Del Rey, CA 90292, give us one week's notice, and we will get you your food!
 		<br /><br />
+		<b>I know I can order food by US mail, but can I order by teleportation?</b><br />
+Why yes you can! Send a check or money order to Crunchbutton, 1120 Princeton Dr STE 7, Marina Del Rey, CA 90292, give us 25 years to develop the appropriate technology, and we will get you your food!<br /><br />
 	</p>
 
 	<br /><br />
