--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -130,10 +130,17 @@
 		<br><br>
 
 		<b>
-			I didn’t get paid the right amount. What’s wrong?
+			I have a question about my paycheck.
 		</b>
 		<br>
-		This shouldn’t ever happen, sorry!! Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> or email david@crunchbutton.com with as many details as possible and we’ll figure it out!
+		Email <a href="mailto:david@crunchbutton.com">david@crunchbutton.com</a> with as many details as possible and we’ll figure it out!
+		<br><br>
+		
+		<b>
+			I’ve run out of money for a cash order! What do I do?!
+		</b>
+		<br>
+		It’s important to carry some cash or have your own credit or debit card you can use. But if you run out of funds, you can either 1) ask another driver on shift to take that order or 2) use the PEX card. If you need to use the PEX card, make sure to email <a href="mailto:david@crunchbutton.com">david@crunchbutton.com</a> the order number and the amount you paid so we can adjust payments accordingly.
 		<br><br>
 
 		<b>
