--- a/include/views/default/cockpit2/frontend/communities/communities.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities.phtml
@@ -12,6 +12,11 @@
 
 	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 
+	<h2>
+		<a href="/community/new">Create a new community</a>
+	</h2>
+	<br><br>
+
 	<ng-include src="'assets/view/listview-communities.html'"></ng-include>
 	<ng-include src="'assets/view/listview-paging.html'"></ng-include>
 </div>
