--- a/include/views/default/cockpit2/frontend/listview/listview-communities.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-communities.phtml
@@ -8,6 +8,7 @@
 			<th>Last Order</th>
 			<th class="tb-center">Restaurants</th>
 			<th>Active</th>
+			<th></th>
 		</tr>
 		<tr ng-repeat="community in communities track by $index" ng-attr-tabindex="{{$index+1}}" tab-select="/community/{{community.permalink || community.id_community}}">
 			<td><a href="/community/{{community.permalink || community.id_community}}">{{community.id_community}}</td>
@@ -19,6 +20,7 @@
 			</td>
 			<td class="tb-center"><a href="/restaurants?community={{community.id_community}}">{{community.restaurants}}</a></td>
 			<td><i class="fa fa-check" ng-if="community.active"></i></td>
+			<td class="tb-center"><a href="/community/edit/{{community.permalink}}">Edit</a></td>
 		</tr>
 	</table>
 </div>
