#4442 - Ability to create communities and aliases in Cockpit.la

--- a/include/views/default/cockpit2/frontend/communities/communities-form.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities-form.phtml
@@ -103,6 +103,10 @@
 				</div>
 			</li>
 
+			<li ng-show="map">
+				<map zoom="12" center="false" class="maps-map" map-type-control="false" style="width:80%; height: 450px;" options="{streetViewControl: false}"></map>
+			</li>
+
 		</ul>
 
 		<br/><br/><br/>
