--- a/include/views/default/cockpit2/frontend/communities/communities-community.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities-community.phtml
@@ -14,7 +14,7 @@
 	<div class="divider"></div>
 	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 	<br>
-	
+
 	<div>
 		<div class="support-boxes-column">
 			<div class="support-box-wrap">
@@ -37,43 +37,49 @@
 							<div class="field-key">Timezone</div>
 							<div class="field-value">{{community.timezone}}</div>
 						</div>
+						<div class="field-row">
+							<div class="field-key">
+								<a href="/community/edit/{{community.permalink}}">Edit</a>
+							</div>
+							<div class="field-value"></div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="support-boxes-column">
 			<div class="support-box-wrap">
 				<h1>Location</h1>
 				<map zoom="12" center="false" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
-	
+
 				</map>
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="divider"></div>
-	
+
 	<br><br>
 	<h1 class="title"><i class="fa fa-coffee"></i>Restaurants<div class="title-loader" ng-if="loadingRestaurants"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<div class="bar-loader bar-loader-title" ng-class="{'bar-loader-loading': loadingRestaurants}"></div>
 	<ng-include src="'assets/view/listview-restaurants.html'"></ng-include>
-	
+
 
 	<br><br>
 	<h1 class="title"><i class="fa fa-car"></i>Orders</h1>
-	<div class="bar-loader bar-loader-title" ng-class="{'bar-loader-loading': loadingOrders}"></div>		
+	<div class="bar-loader bar-loader-title" ng-class="{'bar-loader-loading': loadingOrders}"></div>
 	<ng-include src="'assets/view/listview-orders.html'"></ng-include>
-	
+
 
 	<div class="right">
 		<p><a href="/orders?community={{community.id_community}}">View all orders</a></p>
 	</div>
-	
+
 	<br><br>
-	<h1 class="title"><i class="fa fa-road"></i>Drivers</h1>	
-	<div class="bar-loader bar-loader-drivers" ng-class="{'bar-loader-loading': loadingStaff}"></div>	
+	<h1 class="title"><i class="fa fa-road"></i>Drivers</h1>
+	<div class="bar-loader bar-loader-drivers" ng-class="{'bar-loader-loading': loadingStaff}"></div>
 	<ng-include src="'assets/view/listview-staff.html'"></ng-include>
-	
+
 
 </div>
