PEX card report modifications #4270

--- a/include/views/default/cockpit2/frontend/pexcard/pexcard-report.phtml
+++ b/include/views/default/cockpit2/frontend/pexcard/pexcard-report.phtml
@@ -32,6 +32,7 @@
 
 			<li class="li-input" ng-show="!isProcessing">
 				<button class="button save" ng-click="report();">Report</button>
+				<button class="button save" ng-click="import_data();">Import data and Report</button>
 			</li>
 
 			<li class="li-input" ng-show="isProcessing">
